# plugin-librarian

./: .gitignore  ANALYSIS.md  CLAUDE.md  FIX_SUMMARY.md  PRD.md  README.md  WORKFLOW_GUIDE.md  plugin.json  scan.py  similarity.py  test_bug_11.py  test_lsh_debug.py  test_similarity_bug.py  test_tokenize_fix.py
.claude/: CLAUDE.md
.claude-plugin/: CLAUDE.md  marketplace.json
.taskmaster/: state.json
.taskmaster/docs/: CLAUDE.md  prd.md
.taskmaster/tasks/: CLAUDE.md  tasks.json
commands/: impact.md  init.md  installed.md  setup.md
docs/: CLAUDE.md  JSON_STRUCTURE.md
librarian/: checkout.py  cli.py  core.py
plugin/: README.md  pyproject.toml
plugin/.claude-plugin/: marketplace.json
plugin/commands/: compare.md  find.md  init.md  scan.md  stats.md  where.md
plugin/librarian/: CLAUDE.md  __init__.py  checkout.py  cli.py  cmd_checkout.py  core.py  diff.py
tests/: CLAUDE.md  README.md  test_checkout.py  test_cli_integration.py  test_compare_marketplaces.py  test_describe.py  test_diff.py  test_json_structure.py  test_marketplace_level.py  test_progress.py  test_sanity_checks.py  test_semantic_search.py
